syntax = "proto3";

option go_package = "example.com/helloworld";

package helloworld;

service Employeecrud {
     rpc DeleteEmployee(Emp) returns (voidEmpResponse){}
    rpc CreateEmployee(Resemp) returns (Emp) {} 
    rpc GetEmployees(voidEmpRequest) returns (Employees){} 
}

message Emp{
    int64 id=1;
    string name=2 ;
    int64 manager_id=3;
    int64 department_id=4;
}

message Resemp {
    string name =1 ;
    int64 manager_id =2;
    int64 department_id =3;
}

message voidEmpRequest{
}

message voidEmpResponse{
}

message Employees {
    repeated Emp employees=1;
}